[gd_scene load_steps=9 format=3 uid="uid://cs1375hvmglnm"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_wi58x"]
[ext_resource type="PackedScene" uid="uid://br5qwnt5kop07" path="res://player/player.tscn" id="2_rjtjm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_de1bv"]
size = Vector2(4242, 3424)

[sub_resource type="CircleShape2D" id="CircleShape2D_shdlo"]
radius = 462.088

[sub_resource type="CircleShape2D" id="CircleShape2D_tldqo"]
radius = 45.1774

[sub_resource type="Curve" id="Curve_cq674"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5g3oh"]
curve = SubResource("Curve_cq674")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4yqi1"]
particle_flag_disable_z = true
angle_max = 180.0
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_5g3oh")
color = Color(0.92549, 0.992157, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_wi58x")
metadata/_edit_lock_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
offset_left = -89.0
offset_top = -45.0
offset_right = 2371.0
offset_bottom = 1361.0
color = Color(0, 0, 0, 1)

[node name="Bubble" type="StaticBody2D" parent="."]
position = Vector2(1164, 642)
collision_layer = 0
collision_mask = 0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Polygon2D" type="Polygon2D" parent="Bubble"]
scale = Vector2(2.105, 2.105)
color = Color(0, 0, 1, 0.521569)
polygon = PackedVector2Array(-72, -207, -127, -182, -180, -122, -207, -61, -222, 11, -203, 75, -152, 157, -95, 200, -30, 219, 30, 221, 98, 195, 151, 157, 197, 98, 225, 13, 206, -67, 168, -142, 104, -194, 34, -218, -32, -220)

[node name="GravArea" type="Area2D" parent="Bubble"]
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
linear_damp_space_override = 1
linear_damp = 0.2
angular_damp_space_override = 1

[node name="GravArea" type="CollisionShape2D" parent="Bubble/GravArea"]
position = Vector2(7, 101)
shape = SubResource("RectangleShape2D_de1bv")

[node name="NonGravArea" type="Area2D" parent="Bubble"]
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
linear_damp_space_override = 3
linear_damp = 0.2
angular_damp_space_override = 1

[node name="NonGravArea" type="CollisionShape2D" parent="Bubble/NonGravArea"]
shape = SubResource("CircleShape2D_shdlo")

[node name="NotNeeded" type="CollisionShape2D" parent="Bubble"]
position = Vector2(-506, 818)
shape = SubResource("CircleShape2D_tldqo")
disabled = true

[node name="Player" parent="." instance=ExtResource("2_rjtjm")]
position = Vector2(1049, 536)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)

[node name="Coin" type="Node2D" parent="."]

[node name="CoinDeath" type="GPUParticles2D" parent="Coin"]
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_4yqi1")
one_shot = true
explosiveness = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 307.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 100
text = "Score: 0"

[connection signal="body_entered" from="Bubble/NonGravArea" to="." method="_on_non_grav_area_body_entered"]
[connection signal="body_exited" from="Bubble/NonGravArea" to="." method="_on_area_2d_body_exited"]
